2008-09-20  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp (call-with-debugging-environment): Don't set
	*debugger-hook* to nil.

2008-09-19  Helmut Eller  <heller@common-lisp.net>

	* slime.el ([def-slime-test] break): Split it up in two versions
	to make the debugger-hook issue more explicit.

	* swank-allegro.lisp (frob-allegro-field-def): There seems to be a
	new type :func handle it like :lisp.

2008-09-19  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-save-marker): New marcro. Use it in combination
	with insert-before-markers.
	(slime-check-buffer-contents): Use {} resp. [] to describe the
	position of output resp. input markers.

	(slime-repl-emit-result): Update window-point.

	(slime-randomize-test-order): New variable.
	(slime-shuffle-list): New function.
	(slime-run-tests): Use it.
	(slime-batch-test): Accept test-name and randomize arguments.

	* test.sh (usage): Accept -n and -S options.

2008-09-18  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-ecl.lisp: Forgot to update ECL's backend when introducing
	swank-frames in commit on 2008-09-12.

2008-09-18  Helmut Eller  <heller@common-lisp.net>

	Some cleanups for the REPL code.

	* slime.el (slime-show-last-output)
	(slime-show-last-output-function)
	(slime-show-last-output-region)
	(slime-maybe-display-output-buffer)
	(slime-repl-last-input-start-mark): Delete unused code.

	(slime-repl-emit-result, slime-repl-insert-prompt)
	(slime-repl-show-abort, slime-repl-insert-result)
	(slime-insert-transcript-delimiter)
	(slime-eval-with-transcript-cont): Consistently use save-excursion
	and insert-before-markers.  We always want to preserve the cursor
	position in the input region (for type-ahead).
	(slime-eval-with-transcript):  Change order of arguments to
	make the common case easier to use.

	(slime-batch-test): Use a timer.
	(slime-check-buffer-contents): New function to test contents and
	current position.  Use it in various places.
